--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ div.user a {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
-    position: fixed;
+    position: absolute;
     top: 0; right: 0; bottom: 0; left: 0;
 }
 
